<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/plaintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="8"
        android:hint="@string/plaintext" />

    <Button
        android:id="@+id/encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/plaintext"
        android:text="@string/encrypt" />

    <Button
        android:id="@+id/decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/encrypt"
        android:layout_toEndOf="@id/encrypt"
        android:text="@string/decrypt" />

    <Button
        android:id="@+id/plaintext_to_clipboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/plaintext"
        android:layout_alignEnd="@id/plaintext"
        android:text="@string/to_clipboard" />

    <CheckBox
        android:id="@+id/use_clipboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/encrypt"
        android:text="@string/use_clipboard" />

    <EditText
        android:id="@+id/ciphertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/use_clipboard"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="8"
        android:hint="@string/ciphertext" />

    <Button
        android:id="@+id/ciphertext_to_clipboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ciphertext"
        android:layout_alignEnd="@id/ciphertext"
        android:text="@string/to_clipboard" />
</RelativeLayout>